Demonstration of Pages Oops message

--- a/blog/client/views/layout/layout.html
+++ b/blog/client/views/layout/layout.html
@@ -41,6 +41,8 @@
 			<a href="http://github.com/orionjs/orion">Github</a>.
 		</p>
 	</div>
+	<hr>
+	<a href="/">Home</a> | <a href="/contact">Contact</a> | <a href="/aboutus">About Us</a> | <a href="/admin">Admin</a>
 </template>
 
 <template name="footer">
